Rename label from 'Calculated Shipping Tier' to 'Shipping Box'

--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -146,7 +146,7 @@
           <h3 class="sectionTitle" style="margin:0 0 8px">Shipping</h3>
           <div class="legacy-grid-3">
             <div class="field">
-              <label>Calculated Shipping Tier</label>
+              <label>Shipping Box</label>
               <select id="shippingBoxSelect"></select>
             </div>
             <div class="field">
