Rename weight and dimension input IDs for clarity

--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -151,23 +151,23 @@
             </div>
             <div class="field">
               <label>Item Weight (lb)</label>
-              <input id="weightLbInput" type="number" min="0" step="1" readonly />
+              <input id="iWeightLbInput" type="number" min="0" step="1" readonly />
             </div>
             <div class="field">
               <label>Item Weight (oz)</label>
-              <input id="weightOzInput" type="number" min="0" step="1" readonly />
+              <input id="iWeightOzInput" type="number" min="0" step="1" readonly />
             </div>
             <div class="field">
               <label>Item Length</label>
-              <input id="lengthInput" type="number" min="0" step="1" readonly />
+              <input id="iLengthInput" type="number" min="0" step="1" readonly />
             </div>
             <div class="field">
               <label>Item Width</label>
-              <input id="widthInput" type="number" min="0" step="1" readonly />
+              <input id="iWidthInput" type="number" min="0" step="1" readonly />
             </div>
             <div class="field">
               <label>Item Height</label>
-              <input id="heightInput" type="number" min="0" step="1" readonly />
+              <input id="iHeightInput" type="number" min="0" step="1" readonly />
             </div>
           </div>
           
