Hide shipping box field in inventory intake

--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -145,7 +145,7 @@
          <div id="shippingBlock" style="margin-top:10px">
           <h3 class="sectionTitle" style="margin:0 0 8px">Shipping</h3>
           <div class="legacy-grid-3">
-            <div class="field">
+            <div class="field hidden">
               <label>Shipping Box</label>
               <select id="shippingBoxSelect"></select>
             </div>
