--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -174,7 +174,7 @@
           <div class="legacy-grid-3">
             <div class="field">
               <label>Calculated Shipping Tier</label>
-              <select id="shippingBoxSelect"></select>
+              <select id="shippingTierSelect"></select>
             </div>
             <div class="field">
               <label>Calculated Weight (lb)</label>
