--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -151,11 +151,11 @@
             </div>
             <div class="field">
               <label>Item Weight (lb)</label>
-              <input id="iWeightLbInput" type="number" min="0" step="1" readonly />
+              <input id="iWeightLbInput" type="number" min="0" step="1" />
             </div>
             <div class="field">
               <label>Item Weight (oz)</label>
-              <input id="iWeightOzInput" type="number" min="0" step="1" readonly />
+              <input id="iWeightOzInput" type="number" min="0" step="1" />
             </div>
             
           </div>
@@ -164,15 +164,15 @@
           <div class="legacy-grid-3">
             <div class="field">
               <label>Item Length</label>
-              <input id="iLengthInput" type="number" min="0" step="1" readonly />
+              <input id="iLengthInput" type="number" min="0" step="1" />
             </div>
             <div class="field">
               <label>Item Width</label>
-              <input id="iWidthInput" type="number" min="0" step="1" readonly />
+              <input id="iWidthInput" type="number" min="0" step="1" />
             </div>
             <div class="field">
               <label>Item Height</label>
-              <input id="iHeightInput" type="number" min="0" step="1" readonly />
+              <input id="iHeightInput" type="number" min="0" step="1" />
             </div>
           </div>
 
